<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_header_search">
       <EditTextPreference
           android:key="@string/pref_search_word1_key"
           android:title="@string/pref_title_search_word1"
           android:selectAllOnFocus="true"
           android:inputType="textCapWords"
           android:capitalize="words"
           android:singleLine="true"
           android:hint="@string/pref_hint_search_word"
          android:maxLines="1" />
    <EditTextPreference
        android:key="@string/pref_search_word2_key"
        android:title="@string/pref_title_search_word2"
        android:selectAllOnFocus="true"
        android:inputType="textCapWords"
        android:capitalize="words"
        android:singleLine="true"
        android:hint="@string/pref_hint_search_word"
        android:maxLines="1" />
    </PreferenceCategory>
</PreferenceScreen>
